updated demo. Added details page examples and cross linking.

--- a/design/Manage-section/files/home/styles.css
+++ b/design/Manage-section/files/home/styles.css
@@ -1042,32 +1042,7 @@
   width:83px;
   word-wrap:break-word;
 }
-.u30_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:20px;
-  height:20px;
-}
-.u30 {
-  border-width:0px;
-  position:absolute;
-  left:747px;
-  top:21px;
-  width:20px;
-  height:20px;
-}
-.u30_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-.u31_div {
+.u30_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1085,7 +1060,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-.u31 {
+.u30 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1093,7 +1068,7 @@
   width:914px;
   height:64px;
 }
-.u31_text {
+.u30_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1102,7 +1077,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-.u32 {
+.u31 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -1110,7 +1085,7 @@
   width:20px;
   height:16px;
 }
-.u32_text {
+.u31_text {
   border-width:0px;
   position:absolute;
   left:16px;
@@ -1119,13 +1094,13 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-.u32_input {
+.u31_input {
   border-width:0px;
   position:absolute;
   left:-3px;
   top:-2px;
 }
-.u33_div {
+.u32_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1144,7 +1119,7 @@
   font-style:normal;
   font-size:12px;
 }
-.u33 {
+.u32 {
   border-width:0px;
   position:absolute;
   left:43px;
@@ -1156,7 +1131,7 @@
   font-style:normal;
   font-size:12px;
 }
-.u33_text {
+.u32_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1164,7 +1139,7 @@
   width:44px;
   white-space:nowrap;
 }
-.u34_div {
+.u33_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1180,7 +1155,7 @@
   box-shadow:none;
   font-size:11px;
 }
-.u34 {
+.u33 {
   border-width:0px;
   position:absolute;
   left:259px;
@@ -1189,7 +1164,7 @@
   height:12px;
   font-size:11px;
 }
-.u34_text {
+.u33_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1197,7 +1172,7 @@
   width:144px;
   white-space:nowrap;
 }
-.u35_div {
+.u34_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1216,7 +1191,7 @@
   font-style:normal;
   font-size:11px;
 }
-.u35 {
+.u34 {
   border-width:0px;
   position:absolute;
   left:572px;
@@ -1228,12 +1203,51 @@
   font-style:normal;
   font-size:11px;
 }
-.u35_text {
+.u34_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:108px;
+  word-wrap:break-word;
+}
+.u35_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:83px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'OpenSans-Italic', 'Open Sans Italic', 'Open Sans';
+  font-weight:400;
+  font-style:italic;
+  font-size:11px;
+}
+.u35 {
+  border-width:0px;
+  position:absolute;
+  left:572px;
+  top:96px;
+  width:83px;
+  height:15px;
+  font-family:'OpenSans-Italic', 'Open Sans Italic', 'Open Sans';
+  font-weight:400;
+  font-style:italic;
+  font-size:11px;
+}
+.u35_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:83px;
   word-wrap:break-word;
 }
 .u36_div {
@@ -1253,48 +1267,9 @@
   font-family:'OpenSans-Italic', 'Open Sans Italic', 'Open Sans';
   font-weight:400;
   font-style:italic;
-  font-size:11px;
-}
-.u36 {
-  border-width:0px;
-  position:absolute;
-  left:572px;
-  top:96px;
-  width:83px;
-  height:15px;
-  font-family:'OpenSans-Italic', 'Open Sans Italic', 'Open Sans';
-  font-weight:400;
-  font-style:italic;
-  font-size:11px;
-}
-.u36_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:83px;
-  word-wrap:break-word;
-}
-.u37_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:83px;
-  height:15px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'OpenSans-Italic', 'Open Sans Italic', 'Open Sans';
-  font-weight:400;
-  font-style:italic;
   font-size:10px;
 }
-.u37 {
+.u36 {
   border-width:0px;
   position:absolute;
   left:773px;
@@ -1306,7 +1281,7 @@
   font-style:italic;
   font-size:10px;
 }
-.u37_text {
+.u36_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1314,21 +1289,46 @@
   width:83px;
   word-wrap:break-word;
 }
+.u37_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  height:18px;
+}
+.u37 {
+  border-width:0px;
+  position:absolute;
+  left:544px;
+  top:21px;
+  width:18px;
+  height:18px;
+}
+.u37_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
 .u38_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:20px;
-  height:20px;
+  width:18px;
+  height:18px;
 }
 .u38 {
   border-width:0px;
   position:absolute;
-  left:747px;
+  left:544px;
   top:84px;
-  width:20px;
-  height:20px;
+  width:18px;
+  height:18px;
 }
 .u38_text {
   border-width:0px;
@@ -1339,57 +1339,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-.u39_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:18px;
-  height:18px;
-}
-.u39 {
-  border-width:0px;
-  position:absolute;
-  left:544px;
-  top:21px;
-  width:18px;
-  height:18px;
-}
-.u39_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-.u40_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:18px;
-  height:18px;
-}
-.u40 {
-  border-width:0px;
-  position:absolute;
-  left:544px;
-  top:84px;
-  width:18px;
-  height:18px;
-}
-.u40_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-.u41_div {
+.u39_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1407,7 +1357,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-.u41 {
+.u39 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1415,7 +1365,7 @@
   width:914px;
   height:64px;
 }
-.u41_text {
+.u39_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1424,7 +1374,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-.u42 {
+.u40 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -1432,7 +1382,7 @@
   width:20px;
   height:16px;
 }
-.u42_text {
+.u40_text {
   border-width:0px;
   position:absolute;
   left:16px;
@@ -1441,13 +1391,13 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-.u42_input {
+.u40_input {
   border-width:0px;
   position:absolute;
   left:-3px;
   top:-2px;
 }
-.u43_div {
+.u41_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1466,7 +1416,7 @@
   font-style:normal;
   font-size:12px;
 }
-.u43 {
+.u41 {
   border-width:0px;
   position:absolute;
   left:43px;
@@ -1478,7 +1428,7 @@
   font-style:normal;
   font-size:12px;
 }
-.u43_text {
+.u41_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1486,7 +1436,7 @@
   width:44px;
   white-space:nowrap;
 }
-.u44_div {
+.u42_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1502,7 +1452,7 @@
   box-shadow:none;
   font-size:11px;
 }
-.u44 {
+.u42 {
   border-width:0px;
   position:absolute;
   left:259px;
@@ -1511,7 +1461,7 @@
   height:12px;
   font-size:11px;
 }
-.u44_text {
+.u42_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1519,7 +1469,7 @@
   width:144px;
   white-space:nowrap;
 }
-.u45_div {
+.u43_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1538,7 +1488,7 @@
   font-style:normal;
   font-size:11px;
 }
-.u45 {
+.u43 {
   border-width:0px;
   position:absolute;
   left:572px;
@@ -1550,7 +1500,7 @@
   font-style:normal;
   font-size:11px;
 }
-.u45_text {
+.u43_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1558,7 +1508,7 @@
   width:108px;
   word-wrap:break-word;
 }
-.u46_div {
+.u44_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1577,7 +1527,7 @@
   font-style:italic;
   font-size:11px;
 }
-.u46 {
+.u44 {
   border-width:0px;
   position:absolute;
   left:572px;
@@ -1589,7 +1539,7 @@
   font-style:italic;
   font-size:11px;
 }
-.u46_text {
+.u44_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -1597,12 +1547,12 @@
   width:83px;
   word-wrap:break-word;
 }
-.u47_div {
+.u45_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:83px;
+  width:120px;
   height:15px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -1616,24 +1566,74 @@
   font-style:italic;
   font-size:10px;
 }
-.u47 {
+.u45 {
   border-width:0px;
   position:absolute;
   left:773px;
   top:150px;
-  width:83px;
+  width:120px;
   height:15px;
   font-family:'OpenSans-Italic', 'Open Sans Italic', 'Open Sans';
   font-weight:400;
   font-style:italic;
   font-size:10px;
 }
+.u45_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:120px;
+  word-wrap:break-word;
+}
+.u46_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:18px;
+  height:18px;
+}
+.u46 {
+  border-width:0px;
+  position:absolute;
+  left:544px;
+  top:147px;
+  width:18px;
+  height:18px;
+}
+.u46_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+.u47_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:20px;
+  height:22px;
+}
+.u47 {
+  border-width:0px;
+  position:absolute;
+  left:743px;
+  top:17px;
+  width:20px;
+  height:22px;
+}
 .u47_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:83px;
+  width:0px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 .u48_img {
@@ -1642,15 +1642,15 @@
   left:0px;
   top:0px;
   width:20px;
-  height:20px;
+  height:22px;
 }
 .u48 {
   border-width:0px;
   position:absolute;
-  left:747px;
-  top:147px;
+  left:743px;
+  top:80px;
   width:20px;
-  height:20px;
+  height:22px;
 }
 .u48_text {
   border-width:0px;
@@ -1666,16 +1666,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:18px;
-  height:18px;
+  width:20px;
+  height:22px;
 }
 .u49 {
   border-width:0px;
   position:absolute;
-  left:544px;
-  top:147px;
-  width:18px;
-  height:18px;
+  left:743px;
+  top:144px;
+  width:20px;
+  height:22px;
 }
 .u49_text {
   border-width:0px;
@@ -3065,6 +3065,26 @@
   width:914px;
   height:64px;
 }
+.u89_div.mouseOver {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:914px;
+  height:64px;
+  background:inherit;
+  background-color:rgba(204, 255, 255, 0.168627450980392);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(204, 204, 204, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+.u89.mouseOver {
+}
 .u89_text {
   border-width:0px;
   position:absolute;
@@ -3297,6 +3317,26 @@
   top:62px;
   width:914px;
   height:64px;
+}
+.u96_div.mouseOver {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:914px;
+  height:64px;
+  background:inherit;
+  background-color:rgba(204, 255, 255, 0.168627450980392);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(204, 204, 204, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+.u96.mouseOver {
 }
 .u96_text {
   border-width:0px;
