--- a/design/Manage-section/data/styles.css
+++ b/design/Manage-section/data/styles.css
@@ -102,6 +102,11 @@
 .radio_button {
   text-align:left;
 }
+.tree_node {
+  text-align:left;
+}
+.menu_item {
+}
 .heading_11 {
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
   font-weight:700;
