--- a/design/Manage-section/files/home/styles.css
+++ b/design/Manage-section/files/home/styles.css
@@ -9787,3 +9787,42 @@
   width:78px;
   white-space:nowrap;
 }
+#u300_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:14px;
+  height:13px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'FontAwesome';
+  font-weight:400;
+  font-style:normal;
+  color:#169BD5;
+}
+#u300 {
+  border-width:0px;
+  position:absolute;
+  left:99px;
+  top:184px;
+  width:14px;
+  height:13px;
+  font-family:'FontAwesome';
+  font-weight:400;
+  font-style:normal;
+  color:#169BD5;
+}
+#u300_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:14px;
+  white-space:nowrap;
+}
