Revised design: Table/List and etc.

--- a/design/Manage-section/data/styles.css
+++ b/design/Manage-section/data/styles.css
@@ -61,6 +61,8 @@
 }
 .box_3 {
 }
+.ellipse {
+}
 .shape {
   font-family:'ArialMT', 'Arial';
   font-weight:400;
@@ -122,8 +124,6 @@
 }
 .tree_node {
   text-align:left;
-}
-.table_cell {
 }
 .menu_item {
 }
