--- a/design/Manage-section/files/home/styles.css
+++ b/design/Manage-section/files/home/styles.css
@@ -2934,8 +2934,8 @@
 #u87 {
   border-width:0px;
   position:absolute;
-  left:517px;
-  top:181px;
+  left:493px;
+  top:182px;
   width:110px;
   height:15px;
   font-family:'OpenSans', 'Open Sans';
@@ -2971,8 +2971,8 @@
 #u88 {
   border-width:0px;
   position:absolute;
-  left:397px;
-  top:181px;
+  left:373px;
+  top:182px;
   width:110px;
   height:15px;
   font-family:'OpenSans', 'Open Sans';
@@ -3018,8 +3018,8 @@
 #u90 {
   border-width:0px;
   position:absolute;
-  left:640px;
-  top:177px;
+  left:616px;
+  top:178px;
   width:70px;
   height:24px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -3059,8 +3059,8 @@
 #u91 {
   border-width:0px;
   position:absolute;
-  left:706px;
-  top:177px;
+  left:682px;
+  top:178px;
   width:58px;
   height:24px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -3088,8 +3088,8 @@
 #u92 {
   border-width:0px;
   position:absolute;
-  left:707px;
-  top:179px;
+  left:683px;
+  top:180px;
   width:1px;
   height:19px;
   color:#0099D3;
@@ -3122,7 +3122,7 @@
 #u94 {
   border-width:0px;
   position:absolute;
-  left:548px;
+  left:521px;
   top:203px;
   width:250px;
   height:139px;
@@ -3160,8 +3160,8 @@
 #u95 {
   border-width:0px;
   position:absolute;
-  left:713px;
-  top:298px;
+  left:681px;
+  top:300px;
   width:68px;
   height:24px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -3203,8 +3203,8 @@
 #u96 {
   border-width:0px;
   position:absolute;
-  left:639px;
-  top:298px;
+  left:607px;
+  top:300px;
   width:64px;
   height:23px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -3224,8 +3224,8 @@
 #u97 {
   border-width:0px;
   position:absolute;
-  left:569px;
-  top:252px;
+  left:537px;
+  top:254px;
   width:212px;
   height:31px;
 }
@@ -3254,8 +3254,8 @@
 #u98 {
   border-width:0px;
   position:absolute;
-  left:567px;
-  top:230px;
+  left:535px;
+  top:232px;
   width:70px;
   height:19px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
@@ -5714,7 +5714,7 @@
   left:87px;
   top:668px;
   width:100px;
-  height:16px;
+  height:15px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
   font-style:normal;
@@ -5732,7 +5732,7 @@
   border-width:0px;
   position:absolute;
   left:-3px;
-  top:-2px;
+  top:-4px;
 }
 #u172 {
   border-width:0px;
@@ -5740,7 +5740,7 @@
   left:87px;
   top:691px;
   width:162px;
-  height:16px;
+  height:15px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
   font-style:normal;
@@ -5758,15 +5758,15 @@
   border-width:0px;
   position:absolute;
   left:-3px;
-  top:-2px;
+  top:-4px;
 }
 #u173 {
   border-width:0px;
   position:absolute;
   left:87px;
-  top:715px;
+  top:714px;
   width:100px;
-  height:16px;
+  height:15px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
   font-style:normal;
@@ -5784,7 +5784,7 @@
   border-width:0px;
   position:absolute;
   left:-3px;
-  top:-2px;
+  top:-4px;
 }
 #u174 {
   border-width:0px;
@@ -5792,7 +5792,7 @@
   left:87px;
   top:738px;
   width:100px;
-  height:16px;
+  height:15px;
   font-family:'OpenSans', 'Open Sans';
   font-weight:400;
   font-style:normal;
@@ -5810,7 +5810,7 @@
   border-width:0px;
   position:absolute;
   left:-3px;
-  top:-2px;
+  top:-4px;
 }
 #u175 {
   border-width:0px;
@@ -6787,4 +6787,41 @@
   top:0px;
   width:81px;
   white-space:nowrap;
+}
+#u209_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:223px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(242, 242, 242, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'OpenSans', 'Open Sans';
+  font-style:normal;
+  font-size:10px;
+}
+#u209 {
+  border-width:0px;
+  position:absolute;
+  left:373px;
+  top:182px;
+  width:223px;
+  height:15px;
+  font-family:'OpenSans', 'Open Sans';
+  font-style:normal;
+  font-size:10px;
+}
+#u209_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:0px;
+  width:219px;
+  word-wrap:break-word;
 }
