--- a/design/Paging_Manage/files/home/styles.css
+++ b/design/Paging_Manage/files/home/styles.css
@@ -1586,7 +1586,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:50px;
+  width:68px;
   height:26px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -1605,9 +1605,9 @@
 #u42 {
   border-width:0px;
   position:absolute;
-  left:1159px;
+  left:1144px;
   top:160px;
-  width:50px;
+  width:68px;
   height:26px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
   font-weight:600;
@@ -1621,7 +1621,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:50px;
+  width:68px;
   height:26px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -1644,7 +1644,7 @@
   position:absolute;
   left:2px;
   top:8px;
-  width:46px;
+  width:64px;
   word-wrap:break-word;
 }
 #u43_div {
@@ -1652,7 +1652,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:59px;
+  width:80px;
   height:24px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -1666,28 +1666,28 @@
   font-style:normal;
   font-size:10px;
   color:#0099D3;
-  text-align:left;
+  text-align:right;
 }
 #u43 {
   border-width:0px;
   position:absolute;
-  left:1084px;
+  left:1042px;
   top:162px;
-  width:59px;
+  width:80px;
   height:24px;
   font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';
   font-weight:600;
   font-style:normal;
   font-size:10px;
   color:#0099D3;
-  text-align:left;
+  text-align:right;
 }
 #u43_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:59px;
+  width:80px;
   height:24px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -1701,7 +1701,7 @@
   font-style:normal;
   font-size:10px;
   color:#0099D3;
-  text-align:left;
+  text-align:right;
 }
 #u43.disabled {
 }
@@ -1710,7 +1710,7 @@
   position:absolute;
   left:2px;
   top:6px;
-  width:55px;
+  width:76px;
   word-wrap:break-word;
 }
 #u44_img {
@@ -1724,7 +1724,7 @@
 #u44 {
   border-width:0px;
   position:absolute;
-  left:1151px;
+  left:1133px;
   top:166px;
   width:1px;
   height:19px;
@@ -1758,7 +1758,7 @@
 #u46 {
   border-width:0px;
   position:absolute;
-  left:929px;
+  left:901px;
   top:188px;
   width:250px;
   height:139px;
@@ -1796,7 +1796,7 @@
 #u47 {
   border-width:0px;
   position:absolute;
-  left:1102px;
+  left:1074px;
   top:285px;
   width:68px;
   height:24px;
@@ -1839,7 +1839,7 @@
 #u48 {
   border-width:0px;
   position:absolute;
-  left:1028px;
+  left:1000px;
   top:285px;
   width:64px;
   height:23px;
@@ -1860,7 +1860,7 @@
 #u49 {
   border-width:0px;
   position:absolute;
-  left:958px;
+  left:930px;
   top:239px;
   width:212px;
   height:31px;
@@ -1890,7 +1890,7 @@
 #u50 {
   border-width:0px;
   position:absolute;
-  left:956px;
+  left:928px;
   top:217px;
   width:70px;
   height:19px;
